fix(prowlarr) set gui option for auth

--- a/charts/stable/prowlarr/values.yaml
+++ b/charts/stable/prowlarr/values.yaml
@@ -6,6 +6,9 @@ image:
 securityContext:
   readOnlyRootFilesystem: false
 
+env:
+  PROWLARR__AUTHENTICATION_METHOD: External
+
 service:
   main:
     ports:
