--- a/charts/stable/sonarr/questions.yaml
+++ b/charts/stable/sonarr/questions.yaml
@@ -8,6 +8,28 @@ questions:
 # Include{replicas}
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
+  - variable: env
+    group: "App Configuration"
+    label: "Image Environment"
+    schema:
+      additional_attrs: true
+      type: dict
+      attrs:
+        - variable: SONARR__AUTHENTICATION_METHOD
+          label: Sonarr Authentication Method
+          description: Select the default auth method, choose External to disable basic/form auth.
+          schema:
+            type: string
+            default: None
+            enum:
+              - value: None
+                description: None
+              - value: Basic
+                description: Basic
+              - value: External
+                description: External
+              - value: Forms
+                description: Forms
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
