--- a/.github/ct-install-config/ct-install.yaml
+++ b/.github/ct-install-config/ct-install.yaml
@@ -1,7 +1,9 @@
 remote: origin
 target-branch: master
+helm-extra-args: --timeout 600s --debug
 chart-yaml-schema: .github/ct-install-config/chart_schema.yaml
 chart-dirs:
   - library
   - charts
 excluded-charts: []
+kubectl-timeout: 120s
