--- a/charts/stable/sickgear/values.yaml
+++ b/charts/stable/sickgear/values.yaml
@@ -1,7 +1,10 @@
 image:
   repository: tccr.io/truecharts/sickgear
   pullPolicy: IfNotPresent
-  tag: version-release_0.25.4@sha256:6a78e9f784cf298552402143bee239858956f4783c7619e9a2b960c0d0d15d73
+  tag: latest@sha256:85dac5001b46ccacec7b008bc32e59a64c576fd191a0f6220a089ad1ef002e2b
+
+env:
+  APP_DATA: /config
 
 securityContext:
   readOnlyRootFilesystem: false
