ct-isntall skip

--- a/.github/ct-install.yaml
+++ b/.github/ct-install.yaml
@@ -15,6 +15,7 @@ excluded-charts:
   - charts/dependency/subchart
   - charts/incubator/frigate
   - charts/incubator/orbital-sync
+  - charts/incubator/discordgsm
   - charts/incubator/plex-meta-manager
   - charts/library/common
   - charts/stable/alertmanager-bot
