chore(apps): fix some multi image apps for renovate

--- a/charts/incubator/neko/questions.yaml
+++ b/charts/incubator/neko/questions.yaml
@@ -13,25 +13,25 @@ questions:
       enum:
         - value: "image"
           description: "Firefox"
-        - value: "imageBrave"
+        - value: "braveImage"
           description: "Brave"
-        - value: "imageChrome"
+        - value: "chromeImage"
           description: "Chrome"
-        - value: "imageChromium"
+        - value: "chromiumImage"
           description: "Chromium"
-        - value: "imageEdge"
+        - value: "edgeImage"
           description: "Edge"
-        - value: "imageRemmina"
+        - value: "remminaImage"
           description: "Remmina"
-        - value: "imageTor"
+        - value: "torImage"
           description: "Tor"
-        - value: "imageVivaldi"
+        - value: "vivaldiImage"
           description: "Vivaldi"
-        - value: "imageVlc"
+        - value: "vlcImage"
           description: "Vlc"
-        - value: "imageVncviewer"
+        - value: "vncviewerImage"
           description: "Vncviewer"
-        - value: "imageXfce"
+        - value: "xfceImage"
           description: "Xfce"
 # Include{controller}
 # Include{replicas}
