--- a/charts/incubator/rickroll/questions.yaml
+++ b/charts/incubator/rickroll/questions.yaml
@@ -13,13 +13,13 @@ questions:
       enum:
         - value: "image"
           description: "Auto starts, but muted | SD quality"
-        - value: "imagefhd"
+        - value: "fhdImage"
           description: "Auto starts, but muted | 1080p quality"
-        - value: "imagefhdgame"
+        - value: "fhdgameImage"
           description: "Lost the game onClick | 1080p quality"
-        - value: "imagefhdonclick"
+        - value: "fhdonclickImage"
           description: "Uses an onClick method with a poster image | 1080p quality"
-        - value: "imagefhdonclick"
+        - value: "fhdonclickImage"
           description: "Uses an onClick method with a poster image | SD quality"
 # Include{controller}
 # Include{replicas}
