--- a/charts/incubator/rickroll/values.yaml
+++ b/charts/incubator/rickroll/values.yaml
@@ -2,19 +2,19 @@ image:
   repository: tccr.io/truecharts/rickroll
   pullPolicy: IfNotPresent
   tag: latest@sha256:9c837cef764f4f88f5ccc54174c3bc33f4ccc4efa4983fa5d1e3c9e88ef5f38e
-imagefhd:
+fhdImage:
   repository: tccr.io/truecharts/rickroll-fhd
   pullPolicy: IfNotPresent
   tag: latest@sha256:a3eeb420f238b02f9d34f840d65dfc67799d5d100ff8e3570c2a5ea2f8f44cb4
-imagefhdgame:
+fhdgameImage:
   repository: tccr.io/truecharts/rickroll-fhd-game
   pullPolicy: IfNotPresent
   tag: latest@sha256:2013fd035653bdcecff9ef5f808ab94b9ecd378b8d73404259a795a313b83248
-imagefhdonclick:
+fhdonclickImage:
   repository: tccr.io/truecharts/rickroll-fhd-onclick
   pullPolicy: IfNotPresent
   tag: latest@sha256:5ab14514f33d67423e7cf2e408a89d350a942b899b5734f122e791cfbae50487
-imageonclick:
+onclickImage:
   repository: tccr.io/truecharts/rickroll-onclick
   pullPolicy: IfNotPresent
   tag: latest@sha256:849f0824bf5e83b424abea3245136e404fc95d559a8c51fac2a41bc3255118ef
