--- a/charts/stable/browserless-chrome/questions.yaml
+++ b/charts/stable/browserless-chrome/questions.yaml
@@ -16,7 +16,7 @@ questions:
       enum:
         - value: "image"
           description: "Chrome"
-        - value: "imagePuppeteer"
+        - value: "puppeteerImage"
           description: "Puppeteer"
 # Include{controller}
 # Include{replicas}
