--- a/charts/stable/browserless-chrome/values.yaml
+++ b/charts/stable/browserless-chrome/values.yaml
@@ -3,7 +3,7 @@ image:
   tag: v1.54.0-chrome@sha256:b078160d79d98b8ec67ef9e367856f466f1454b87da808c76a8dcb3c5e5d3c18
   pullPolicy: IfNotPresent
 
-imagePuppeteer:
+puppeteerImage:
   repository: tccr.io/truecharts/browserless-chrome-puppeteer13
   pullPolicy: IfNotPresent
   tag: v1.51.1-puppeteer@sha256:5afac483afda1f569e166692f3612c926b8c8b6f111e47cd53a52cdd6fe329ec
