--- a/charts/stable/deepstack/questions.yaml
+++ b/charts/stable/deepstack/questions.yaml
@@ -14,7 +14,7 @@ questions:
       enum:
         - value: "image"
           description: "CPU"
-        - value: "imageGPU"
+        - value: "gpuImage"
           description: "GPU"
 # Include{controller}
 # Include{replicas}
