--- a/charts/stable/deepstack/values.yaml
+++ b/charts/stable/deepstack/values.yaml
@@ -3,7 +3,7 @@ image:
   pullPolicy: IfNotPresent
   tag: v2022.01.1@sha256:494b5bec44924da7789d6093464e2c41d4d8866aa4db54d6e3dcbecb7ae84d48
 
-imageGPU:
+gpuImage:
   repository: tccr.io/truecharts/deepstack-gpu
   pullPolicy: IfNotPresent
   tag: v2021.09.1@sha256:f924cebf518a54bca2ca2ac33911cf3af4dd7403cad371781422436ce4254a28
