--- a/charts/stable/ml-workspace/questions.yaml
+++ b/charts/stable/ml-workspace/questions.yaml
@@ -13,15 +13,15 @@ questions:
       enum:
         - value: "image"
           description: "CPU"
-        - value: "imageGPU"
+        - value: "gpuImage"
           description: "GPU"
-        - value: "imageMinimal"
+        - value: "minimalImage"
           description: "Minimal"
-        - value: "imageLight"
+        - value: "lightImage"
           description: "Light"
-        - value: "imageSpark"
+        - value: "sparkImage"
           description: "Spark"
-        - value: "imageR"
+        - value: "rImage"
           description: "R"
 # Include{controller}
 # Include{replicas}
