--- a/charts/incubator/neko/values.yaml
+++ b/charts/incubator/neko/values.yaml
@@ -3,52 +3,52 @@ image:
   pullPolicy: IfNotPresent
   tag: latest@sha256:9df6e31e74803432be9f3f0558f96867680481a9de54af009185f8b1aa88b668
 
-imageBrave:
+braveImage:
   repository: tccr.io/truecharts/neko-brave
   pullPolicy: IfNotPresent
   tag: latest@sha256:c6a9293e73ce248c62b941d8877a506939def0ac105f8cd7475eeeabc9ff7ebf
 
-imageChrome:
+chromeImage:
   repository: tccr.io/truecharts/neko-chrome
   pullPolicy: IfNotPresent
   tag: latest@sha256:3d5c18318d5c07c5cf6e3733811cca72044db78e740cbc5a1032764ddd2c2ce6
 
-imageChromium:
+chromiumImage:
   repository: tccr.io/truecharts/neko-chromium
   pullPolicy: IfNotPresent
   tag: latest@sha256:796e8fa62372299f41a86bada76981f71b6e404ac927871d0a5bae53cf6ed384
 
-imageEdge:
+edgeImage:
   repository: tccr.io/truecharts/neko-msedge
   pullPolicy: IfNotPresent
   tag: latest@sha256:d23c209da9491290e0c26e4c12a94aef9b630ac49cf85c06eb965d58f99b0c1a
 
-imageRemmina:
+remminaImage:
   repository: tccr.io/truecharts/neko-remmina
   pullPolicy: IfNotPresent
   tag: latest@sha256:a8aa398d954531e9282bd9d3fb9fff729d34364975a58f62675828f33374997a
 
-imageTor:
+torImage:
   repository: tccr.io/truecharts/neko-tor
   pullPolicy: IfNotPresent
   tag: latest@sha256:bd5a1186f39d03335969b70daa8dc67b1ecbe02c64256e2cf655c8b691ebc303
 
-imageVivaldi:
+vivaldiImage:
   repository: tccr.io/truecharts/neko-vivaldi
   pullPolicy: IfNotPresent
   tag: latest@sha256:c212091ef7c8fb4785272498be36ab26bf34875fa3baea5dc318d73ea3be67d1
 
-imageVlc:
+vlcImage:
   repository: tccr.io/truecharts/neko-vlc
   pullPolicy: IfNotPresent
   tag: latest@sha256:ee4e2414167726106608a6bd3c27de3c1bb8d3257ee930aa54bc631316a3bf8b
 
-imageVncviewer:
+vncviewerImage:
   repository: tccr.io/truecharts/neko-vncviewer
   pullPolicy: IfNotPresent
   tag: latest@sha256:9d6680979372ae561fd157cc973d8e73a826ccf68773314169d2d761564c184d
 
-imageXfce:
+xfceImage:
   repository: tccr.io/truecharts/neko-xfce
   pullPolicy: IfNotPresent
   tag: latest@sha256:96347d6d5f055a172f7c383d871c61b6674d37c93177194e4a0beed127d1bc05
