--- a/charts/incubator/lama-cleaner/values.yaml
+++ b/charts/incubator/lama-cleaner/values.yaml
@@ -1,11 +1,11 @@
 image:
-  repository: cwq1913/lama-cleaner
+  repository: tccr.io/truecharts/lama-cleaner-cpu
   pullPolicy: IfNotPresent
-  tag: cpu-0.26.1@sha256:e57095636fe19e62280e78f10f98fff0fe1e0608e689515b2a0a56a7d2dad2e8
+  tag: v0.26.1@sha256:5b9a166806fa1b7a2ab44196704e2772bf93dd2415fe869b0fabf072a61e356a
 
 gpuImage:
-  repository: cwq1913/lama-cleaner
-  tag: gpu-0.26.1@sha256:65c54a6309f46bb643be31d704e4b361988b277f7b9492a9dd8e24c28220005c
+  repository: tccr.io/truecharts/lama-cleaner-gpu
+  tag: v0.26.1@sha256:14ee85f997664a5e638287609b7bff9829c65ead48ce445612ac258631f4fc7d
   pullPolicy: Always
 
 imageSelector: image
