--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -258,6 +258,11 @@
     },
     {
       "matchDatasources": ["docker"],
+      "matchPackagePrefixes": ["tccr.io/truecharts/rickroll"],
+      "groupName": "rickroll",
+    },    
+    {
+      "matchDatasources": ["docker"],
       "matchPackagePrefixes": ["tccr.io/truecharts/docspell"],
       "groupName": "docspell",
     },
