--- a/charts/incubator/ersatztv/values.yaml
+++ b/charts/incubator/ersatztv/values.yaml
@@ -28,6 +28,8 @@ persistence:
   config:
     enabled: true
     mountPath: /root/.local/share/ersatztv
+  varrun:
+    enabled: true
 
 portal:
   enabled: true
