--- a/charts/incubator/openbooks/values.yaml
+++ b/charts/incubator/openbooks/values.yaml
@@ -1,29 +1,32 @@
 image:
-  repository: evanbuss/openbooks
+  repository: tccr.io/truecharts/openbooks
   pullPolicy: IfNotPresent
-  tag: 4.5.0@sha256:3f2e59a75b68950d57cfec5dc2b1b31d6c6b02706097c70b5438499b59fbdea2
+  tag: 4.5.0@sha256:fe1b693d63397e01a5673b8b16180539c1cb952abfe4ebfb58d0950ab9886adc
 
-extraArgs:
-  - --port
-  - "{{ .Values.service.main.ports.main.port }}"
-  - --persist
-  - --name
-  - "{{.Values.env.USER_NAME}}"
+securityContext:
+  readOnlyRootFilesystem: false
 
-env:
-  USER_NAME: "truecharts"
+openbooks:
+  user_name: truecharts
+  server: irc.irchighway.net:6697
+  debug: true
+  log: true
+  search: search
+  persist: false
+  no_browser_downloads: false
+  tls: true
 
 service:
   main:
     ports:
       main:
         protocol: HTTP
-        port: 10607
+        port: 10608
 
 persistence:
   books:
     enabled: true
-    mountPath: /books
+    mountPath: /books/books
 
 portal:
   enabled: true
