--- a/charts/stable/wbo/Chart.yaml
+++ b/charts/stable/wbo/Chart.yaml
@@ -4,7 +4,7 @@ dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.1.2
-description: WBO is an online collaborative whiteboard that allows many users to draw simultaneously on a large virtual board.
+description: an online collaborative whiteboard that allows many users to draw simultaneously on a large virtual board.
 home: https://truecharts.org/charts/incubator/wbo
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/wbo.png
 keywords:
@@ -19,7 +19,7 @@ name: wbo
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/wbo
   - https://github.com/lovasoa/whitebophir
-version: 2.0.7
+version: 3.0.0
 annotations:
   truecharts.org/catagories: |
     - productivity
