--- a/charts/incubator/frigate/questions.yaml
+++ b/charts/incubator/frigate/questions.yaml
@@ -219,7 +219,7 @@ questions:
                         default: []
                         items:
                           - variable: component_entry
-                            label: Component Specific Log Entry
+                            label: ""
                             schema:
                               additional_attrs: true
                               type: dict
